src/objects/Customer_Satisfaction_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Free-form comments from the customer</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <description>The customer’s overall satisfaction level</description>
        <label>Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>No Opinion</fullName>
                </value>
                <value>
                    <fullName>Somewhat Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>The customer’s rating of the service</description>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>No Opinion</fullName>
                </value>
                <value>
                    <fullName>Needs Improvement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Satisfaction Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Satisfaction Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Satisfaction Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>